@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import controller.Controller;
@@ -13,8 +14,13 @@ import view.EventView;
 import view.IEventView;
 import view.IScheduleTextView;
 import view.IScheduleView;
+import view.ScheduleTextView;
 import view.ScheduleView;
 
+/**
+ * Represents the class that allows the user to run the calendar system end to end
+ * through the graphical user interface.
+ */
 public class MainPlanner {
   /**
    * Main method to play an instance of Simon Game.
@@ -22,31 +28,39 @@ public class MainPlanner {
    */
   public static void main(String[] args) {
     PlannerSystem model = new NUPlanner(); // Feel free to customize this as desired
-    Event morningSnack = new Event("snack",
+    IEvent morningSnack = new Event("snack",
             new Time(Time.Day.TUESDAY, 10, 30),
             new Time(Time.Day.TUESDAY, 11, 45),
             false,
             "Churchill Hall 101",
-            List.of("Prof. Lucia"));
+            Arrays.asList("Prof. Lucia"));
 
-    Event officeHours = new Event("office hours",
+    IEvent officeHours = new Event("office hours",
             new Time(Time.Day.MONDAY, 12, 10),
             new Time(Time.Day.MONDAY, 15, 30),
             false,
             "Churchill Hall 101",
-            List.of("Prof. Lucia"));
+            Arrays.asList("Prof. Lucia", "Me"));
+
+    IEvent sleep = new Event("sleep",
+            new Time(Time.Day.FRIDAY, 12, 10),
+            new Time(Time.Day.SUNDAY, 15, 30),
+            false,
+            "home",
+            Arrays.asList("Prof. Lucia"));
 
     model.addUser(new User("Prof. Lucia",
-            new Schedule(new ArrayList<>(List.of(morningSnack, officeHours)))));
-    model.addUser(new User("Me", new Schedule(new ArrayList<>())));
+            new Schedule(new ArrayList<>(List.of(morningSnack, officeHours, sleep)))));
+    model.addUser(new User("Me", new Schedule(new ArrayList<>(List.of(officeHours)))));
 
-    //  IScheduleView view = new ScheduleView(model);
-    IScheduleView schedView = new ScheduleView(model); // (michelle) currently working on event view so changed this here + in controller.
+    IScheduleView schedView = new ScheduleView(model);
     IEventView eView = new EventView(model);
+    IScheduleTextView tView = new ScheduleTextView(model, new StringBuilder());
     Controller controller = new Controller(model);
 
     controller.setScheduleView(schedView);
     controller.setEventView(eView);
+    controller.setTextView(tView);
     controller.goPlayGame();
   }
 
